# jp-place-digest

./: .env.example  .gitignore  Makefile  README.md  digest.md  digest_additions.md  digest_full.md  docker-compose.yml  main.py  pyproject.toml  trip.yaml
migrations/: env.py
migrations/versions/: 8b3b6c1a5f9a_add_experience_scores.py  a381f72a2a01_add_raw_json.py  c3f8b0ad3a2c_add_location_hint.py  d2cbc0b5b6c0_init_schema.py  f1c2d3e4f5a6_add_experience_mentions_clusters.py  f7d4155836c3_remove_obsolete_phase1_tables.py
src/jp_digest/: cli.py
src/jp_digest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jp_digest/connectors/: reddit.py
src/jp_digest/core/: config.py  queries.py  textnorm.py
src/jp_digest/services/: digest.py  extraction.py  grounding.py  llm.py  nominatim.py  ranking.py
src/jp_digest/storage/: db.py  models.py
