[project]
name = "jp-digest"
version = "0.1.0"
description = "Weekly digest of grounded travel POIs from Reddit."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "tenacity>=8.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "openai>=1.40.0",
  "rapidfuzz>=3.9.0",
]

[project.scripts]
jp-digest = "jp_digest.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
